[package]
name = "access_remove_locked_list"
version = "0.1.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["concurrency_toolkit/async_tokio"]
permutation_testing = ["concurrency_toolkit/permutation_testing"]

[dependencies]
concurrency_toolkit = { version = "0.1.2" }
