[package]
name = "concurrent_read_push_list"
version = "0.1.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["concurrency_toolkit/default"]
permutation_testing = ["concurrency_toolkit/permutation_testing", "loom"]

[dependencies]
# Since concurrency_toolkit only allows one feature enabled at a time, 
# use default-features = false to disable its default feature (std sync)
concurrency_toolkit = { version = "0.2.8", default-features = false }
loom = { version = "0.5.1", features = ["checkpoint"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
more-asserts = "0.2.1"
